Add support for running the JSONP TCK in remote managed WildFly and standalone against the WildFly JSONP api jar.
Signed-off-by: Scott M Stark <starksm64@gmail.com>